--- a/potensi-penduduk.html
+++ b/potensi-penduduk.html
@@ -15,10 +15,7 @@
     />
 
     <!-- Load jQuery -->
-    <script
-      type="text/javascript"
-      src="http://bukitmakmur-kotim.desa.id/themes/default/assets/plugins/jquery/jquery.min.js"
-    ></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
