--- a/potensi-wilayah.html
+++ b/potensi-wilayah.html
@@ -8,16 +8,14 @@
     <link rel="stylesheet" href="owl.theme.default.css" />
     <link rel="stylesheet" href="owl.carousel.min.css" />
     <link rel="stylesheet" href="aos.css" />
+    <link rel="stylesheet" href="boot.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     />
 
     <!-- Load jQuery -->
-    <script
-      type="text/javascript"
-      src="http://bukitmakmur-kotim.desa.id/themes/default/assets/plugins/jquery/jquery.min.js"
-    ></script>
+    <script type="text/javascript" src="jquery.min.js"></script>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
